2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/file.c: GLib: rewrite sanitise_filename() as a simple
	  wrapper over g_strdelimit()

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (51): GLib: change vstralloc(...) for g_strjoin(NULL, ...)
	* common-src/alloc.c, common-src/amanda.h: remove prototypes/macros of
	  vstralloc()
	* server-src/driverio.c: add one missing NULL to the list of arguments
	  along the way

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (31): GLib: change vstrallocf() for g_strdup_printf();
	  change to a simple g_strup() when possible
	* common-src/alloc.c, common-src/amanda.h: remove prototypes/macros of
	  vstrallocf()

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (54): GLib: change alloc() for g_malloc()
	* common-src/alloc.c, common-src/amanda.h: remove prototypes/macros of
	  alloc()

2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (79): GLib: change stralloc() for g_strdup()
	* common-src/alloc.c, common-src/amanda.h: remove prototypes/macros of
	  stralloc()

2011-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Fix gnutar pattern matching for gtar 1.25.

2011-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: s/NDMP4_/NDMP9_/g

2011-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amrecover.8.xml: Add an AUTH section.

2011-05-13  Francis Galiegue <fgaliegue@gmail.com>
	* amandad-src/amandad.c: in recv_errfd(): two more NETWORK_BLOCK_BYTES
	  usages and a fix: g_snprintf() conforms to C99 and the C99 standard
	  states that the result string will always be nul terminated

2011-05-13  Francis Galiegue <fgaliegue@gmail.com>
	* amandad-src/amandad.c: in recv_errfd(): fix 'buf' local variable
	  handling (you should write to buf, not &buf, and when n bytes have
	  been read, you should zero byte[n], not byte[n+1])

2011-05-13  Francis Galiegue <fgaliegue@gmail.com>