@@ -1,4 +1,7 @@
 2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
+	* amandad-src/amandad.c: handle reply buffer extension in only one place
+
+2011-05-18  Francis Galiegue <fgaliegue@gmail.com>
 	* common-src/file.c: GLib: rewrite sanitise_filename() as a simple
 	  wrapper over g_strdelimit()
 
